# SCHNApps

schnapps/plugins/cmap_provider/: CMakeLists.txt  cmap2_provider.ui  cmap_provider.cpp  cmap_provider.h  undirected_graph_provider.ui  undirected_graph_provider_dock_tab.cpp  undirected_graph_provider_dock_tab.h
schnapps/plugins/polyline_render/: polyline_render.cpp
schnapps/plugins/shallow_water_2/: CMakeLists.txt  dialog_shallow_water.cpp  dialog_shallow_water.h  plugin_shallow_water_2Config.cmake.in  shallow_water.cpp  shallow_water.h
schnapps/plugins/surface_feature_lines/: CMakeLists.txt  dialog_compute_feature_lines.cpp  dialog_compute_feature_lines.h  dialog_compute_feature_lines.ui  dll.h  map_parameters.h  surface_feature_lines.cpp  surface_feature_lines.h
schnapps/plugins/tubular_mesh/: CMakeLists.txt  dll.h  plugin_tubular_meshConfig.cmake.in  tubular_mesh.cpp  tubular_mesh.h
